@@ -1,6 +1,6 @@
 ## Process this file with automake to produce Makefile.in
 
-SUBDIRS = m4 intl nih nih-dbus dbus init doc po # util
+SUBDIRS = m4 intl nih nih-dbus nih-dbus-tool dbus init doc po # util
 
 EXTRA_DIST = HACKING ChangeLog.nih
 
