@@ -55,9 +55,9 @@ com_ubuntu_Upstart_OUTPUTS = \
 com_ubuntu_Upstart_XML = \
 	../dbus/com.ubuntu.Upstart.xml
 
-$(com_ubuntu_Upstart_OUTPUTS): $(com_ubuntu_Upstart_XML) ../nih-dbus/nih_dbus_tool.py
-	$(MAKE) -C ../nih-dbus $(AM_MAKEFLAGS) nih-dbus-tool
-	$(top_builddir)/nih-dbus/nih-dbus-tool \
+$(com_ubuntu_Upstart_OUTPUTS): $(com_ubuntu_Upstart_XML) ../nih-dbus-tool/nih_dbus_tool.py
+	$(MAKE) -C ../nih-dbus-tool $(AM_MAKEFLAGS) nih-dbus-tool
+	$(top_builddir)/nih-dbus-tool/nih-dbus-tool \
 		--mode=object --prefix=control --output=$@ $<
 
 
@@ -68,9 +68,9 @@ com_ubuntu_Upstart_Job_OUTPUTS = \
 com_ubuntu_Upstart_Job_XML = \
 	../dbus/com.ubuntu.Upstart.Job.xml
 
-$(com_ubuntu_Upstart_Job_OUTPUTS): $(com_ubuntu_Upstart_Job_XML) ../nih-dbus/nih_dbus_tool.py
-	$(MAKE) -C ../nih-dbus $(AM_MAKEFLAGS) nih-dbus-tool
-	$(top_builddir)/nih-dbus/nih-dbus-tool \
+$(com_ubuntu_Upstart_Job_OUTPUTS): $(com_ubuntu_Upstart_Job_XML) ../nih-dbus-tool/nih_dbus_tool.py
+	$(MAKE) -C ../nih-dbus-tool $(AM_MAKEFLAGS) nih-dbus-tool
+	$(top_builddir)/nih-dbus-tool/nih-dbus-tool \
 		--mode=object --prefix=job_class --output=$@ $<
 
 
@@ -81,9 +81,9 @@ com_ubuntu_Upstart_Instance_OUTPUTS = \
 com_ubuntu_Upstart_Instance_XML = \
 	../dbus/com.ubuntu.Upstart.Instance.xml
 
-$(com_ubuntu_Upstart_Instance_OUTPUTS): $(com_ubuntu_Upstart_Instance_XML) ../nih-dbus/nih_dbus_tool.py
-	$(MAKE) -C ../nih-dbus $(AM_MAKEFLAGS) nih-dbus-tool
-	$(top_builddir)/nih-dbus/nih-dbus-tool \
+$(com_ubuntu_Upstart_Instance_OUTPUTS): $(com_ubuntu_Upstart_Instance_XML) ../nih-dbus-tool/nih_dbus_tool.py
+	$(MAKE) -C ../nih-dbus-tool $(AM_MAKEFLAGS) nih-dbus-tool
+	$(top_builddir)/nih-dbus-tool/nih-dbus-tool \
 		--mode=object --prefix=job --output=$@ $<
 
 
